# rofox

./: Migration_to_ROS2.md  README.md
fox_bringup/: CMakeLists.txt  package.xml
fox_bringup/launch/: fox.launch  fox.launch.xml  fox_gazebo.launch  fox_gazebo.launch.xml  fox_on_remotePC.launch.xml  fox_on_robotPC.launch  fox_on_robotPC.launch.xml  rosserial.launch
fox_bringup/rviz/: fox.rviz
fox_description/: CMakeLists.txt  package.xml
fox_description/launch/: fox_model.launch  fox_robstatepub_xacro.launch.py
fox_description/rviz/: fox.rviz  fox_ns.rviz
fox_description/urdf/: ar_tag.urdf.xacro  base_fox_cart.gazebo.xacro  base_fox_cart.urdf.xacro  base_fox_cart_verticaltag.urdf.xacro  camera.urdf.xacro  camera_tb3.urdf.xacro  caster.urdf.xacro  imu.urdf.xacro  laser.urdf.xacro  logo.urdf.xacro  wheel.urdf.xacro
fox_ekf/: CMakeLists.txt  package.xml
fox_ekf/launch/: fox_ekf.launch  fox_ekf.launch.xml  message_conversion.launch  message_conversion.launch.xml
fox_ekf/msg/: Imu.msg
fox_ekf/src/: msgs_conversion.cpp
fox_gazebo/: CMakeLists.txt  package.xml
fox_gazebo/launch/: fox_arena.launch  fox_arena.launch.xml  fox_empty_world.launch.xml  fox_house.launch  fox_maze.launch  fox_maze.launch.xml  gazebo.launch  gazebo.launch.xml  spawn_fox.launch  spawn_fox.launch.xml  spawn_ns_fox.launch  spawn_ns_fox.launch.xml
fox_gazebo/src/: tf_remapper.cpp
fox_hardware/: CMakeLists.txt  package.xml
fox_hardware/launch/: camera.launch.xml  fox_tf.launch.xml  hardware.launch  hardware.launch.xml  lidar.launch  lidar.launch.xml
fox_hil_sim/: CMakeLists.txt  README.md  package.xml
fox_hil_sim/launch/: fox_hil_gazebo.launch
fox_hil_sim/src/: gazebo_model_update.py
fox_hil_sim/urdf/: base_fox_cart.urdf.xacro  hil_base_fox_cart.urdf
fox_localization/: CMakeLists.txt  package.xml
fox_localization/config/: fox_lds_2d_slam.lua
fox_localization/launch/: amcl.launch.xml  cartographer.launch.xml  gmapping.launch
fox_localization/map/: office_fox.pgm
fox_localization/param/: fox_amcl.yaml
fox_localization/rviz/: fox_amcl.rviz  fox_cartographer.rviz
fox_navigation/: CMakeLists.txt  package.xml
fox_navigation/config/: trajectory_planner.yaml
fox_navigation/launch/: RL_move_base.launch  move_base.launch  navigation2.launch.xml  sim_move_base.launch
fox_teleop/: CMakeLists.txt  JoyReadMe.md  package.xml
fox_teleop/launch/: teleop_joy.launch  (+1 more)
pose2odom/: CMakeLists.txt  package.xml
stationsplein_description/: CMakeLists.txt  README.md  package.xml
teleop_twist_joy_fox/: CMakeLists.txt
(+98 files in other folders)
